# tiktoken-elixir

./: .gitignore  LICENSE  README.md  mix.exs
.github/workflow/: ci.yml
.github/workflows/: release.yml  setup.sh
config/: config.exs
lib/: tiktoken.ex
lib/tiktoken/: cl100k.ex  encoding.ex  native.ex  o200k.ex  p50k.ex  p50k_edit.ex  r50k.ex
native/tiktoken/: Cargo.toml  README.md
native/tiktoken/.cargo/: config.toml
native/tiktoken/src/: lib.rs  thread_local.rs
test/: tiktoken_test.exs
test/tiktoken/: cl100k_test.exs
