[package]
name = "tiktoken"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "tiktoken"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.2", default-features = false, features = ["derive"] }
tiktoken-rs = "0.7.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
